--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.0",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@storybook/addon-backgrounds": "^5.3.18",
     "@storybook/addon-knobs": "^5.3.6",
     "@storybook/react": "^5.3.2",
     "babel-eslint": "^10.0.3",
