Add docs folder

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "start-storybook",
     "build": "parcel build ./src/index.js",
+    "build-storybook": "build-storybook -c .storybook -o docs",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src --ext .js,.jsx"
