--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Felipe Viegas <felipesviegas@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "start-storybook",
+    "start": "start-storybook -p 9001",
     "build": "parcel build ./src/index.js",
     "build-storybook": "rm -rf docs && build-storybook -c .storybook -o docs",
     "test": "jest",
