--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "start": "start-storybook -p 9001",
     "build": "parcel build ./src/index.js",
-    "build-storybook": "rm -rf docs && build-storybook -c .storybook -o docs",
-    "test": "jest",
+    "build-storybook": "rm -rf docs && build-storybook -c .storybook -o dist",
+    "test": "jest --json --outputFile=.jest-test-results.json",
     "test:watch": "jest --watchAll",
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
     "lint": "eslint src --ext .js,.jsx",
     "format": "prettier --write src"
   },
@@ -19,9 +20,10 @@
     "@babel/plugin-proposal-class-properties": "^7.8.0",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
-    "@storybook/addon-backgrounds": "^5.3.18",
-    "@storybook/addon-knobs": "^5.3.6",
-    "@storybook/react": "^5.3.2",
+    "@storybook/addon-backgrounds": "^6.0.13",
+    "@storybook/addon-knobs": "^6.0.13",
+    "@storybook/addon-jest": "^6.0.13",
+    "@storybook/react": "^6.0.13",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
